crates/oxc_react_compiler/tests/snapshots/align-scopes-reactive-scope-overlaps-if.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/align-scopes-reactive-scope-overlaps-if.ts
---
import { c as _c } from "react/compiler-runtime";
function useFoo(t0) {
	const $ = _c(3);
	const { cond } = t0;
	let t1;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t1 = {};
		$[0] = t1;
	} else {
		t1 = $[0];
	}
	let items = t1;
	if ($[1] !== cond) {
		bb0: {
			if (cond) {
				items = [];
			} else {
				break bb0;
			}
			items.push(2);
		}
		$[1] = cond;
		$[2] = items;
	} else {
		items = $[2];
	}
	return items;
}
export const FIXTURE_ENTRYPOINT = {
	fn: useFoo,
	params: [{ cond: true }],
	sequentialRenders: [
		{ cond: true },
		{ cond: true },
		{ cond: false },
		{ cond: false },
		{ cond: true }
	]
};
