crates/oxc_react_compiler/tests/snapshots/allocating-primitive-as-dep-nested-scope.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/allocating-primitive-as-dep-nested-scope.js
---
import { c as _c } from "react/compiler-runtime";
// bar(props.b) is an allocating expression that produces a primitive, which means
// that Forget should memoize it.
// Correctness:
import { identity, mutate, setProperty } from "shared-runtime";
//   - y depends on either bar(props.b) or bar(props.b) + 1
function AllocatingPrimitiveAsDepNested(props) {
	const $ = _c(7);
	let t0;
	if ($[0] !== props.a || $[1] !== props.b) {
		const x = {};
		mutate(x);
		let t1;
		if ($[3] !== props.b) {
			t1 = identity(props.b);
			$[3] = props.b;
			$[4] = t1;
		} else {
			t1 = $[4];
		}
		const t2 = t1 + 1;
		let t3;
		if ($[5] !== t2) {
			t3 = identity(t2);
			$[5] = t2;
			$[6] = t3;
		} else {
			t3 = $[6];
		}
		const y = t3;
		setProperty(x, props.a);
		t0 = [x, y];
		$[0] = props.a;
		$[1] = props.b;
		$[2] = t0;
	} else {
		t0 = $[2];
	}
	return t0;
}
export const FIXTURE_ENTRYPOINT = {
	fn: AllocatingPrimitiveAsDepNested,
	params: [{
		a: 1,
		b: 2
	}],
	sequentialRenders: [
		{
			a: 1,
			b: 3
		},
		{
			a: 1,
			b: 4
		},
		{
			a: 2,
			b: 4
		},
		{
			a: 3,
			b: 4
		}
	]
};
