crates/oxc_react_compiler/tests/snapshots/allow-assigning-to-global-in-function-spread-as-jsx.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/allow-assigning-to-global-in-function-spread-as-jsx.js
---
import { c as _c } from "react/compiler-runtime";
// @enableNewMutationAliasingModel:false
function Component() {
	const $ = _c(1);
	const foo = _temp;
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = <div {...foo} />;
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
function _temp() {
	someGlobal = true;
}
